# Jupiter

./: .gitignore  CMakeLists.txt  CMakePresets.json  DEPLOY.md  JIR_IMG_RDR_2023252T132035_V01.IMG  JIR_SPE_RESPONSIVITY_V02.LBL  PATCH04_NOTES.md  PATCH_04_APPLIED.txt  PATCH_FILE_LIST.md  distributions.h  jiram3.txt  jiram_spe_ascii_grid.txt  regimes.h
.patch_backups/patch03b_20260626_030835/config/: default.sim
.patch_backups/patch03b_20260626_030835/src/: main.cpp
.patch_backups/patch04_20260626_033917/: README.md
.patch_backups/patch04_20260626_033917/config/: default.sim
.patch_backups/patch04_20260626_033917/src/: main.cpp
data/: JIR_IMG_RDR_2023250T005829_V01.IMG  JIR_IMG_RDR_2023250T005829_V01.LBL  JIR_IMG_RDR_2023250T005829_V01.xml  JIR_IMG_RDR_2023250T005900_V01.IMG  JIR_IMG_RDR_2023250T005900_V01.LBL  JIR_IMG_RDR_2023250T005900_V01.xml  JIR_IMG_RDR_2023250T005930_V01.IMG  JIR_IMG_RDR_2023250T005930_V01.LBL  JIR_IMG_RDR_2023250T005930_V01.xml  JIR_IMG_RDR_2023250T010001_V01.IMG  JIR_IMG_RDR_2023250T010001_V01.LBL  JIR_IMG_RDR_2023250T010001_V01.xml  JIR_IMG_RDR_2023250T010032_V01.IMG  JIR_IMG_RDR_2023250T010032_V01.LBL  JIR_IMG_RDR_2023250T010032_V01.xml  JIR_IMG_RDR_2023250T010102_V01.IMG  JIR_IMG_RDR_2023250T010102_V01.LBL  JIR_IMG_RDR_2023250T010102_V01.xml  JIR_IMG_RDR_2023250T010133_V01.IMG  JIR_IMG_RDR_2023250T010133_V01.LBL  JIR_IMG_RDR_2023250T010133_V01.xml  JIR_IMG_RDR_2023250T010204_V01.IMG  JIR_IMG_RDR_2023250T010204_V01.LBL  JIR_IMG_RDR_2023250T010204_V01.xml  JIR_IMG_RDR_2023250T010234_V01.IMG  JIR_IMG_RDR_2023250T010234_V01.LBL  JIR_IMG_RDR_2023250T010234_V01.xml  JIR_IMG_RDR_2023250T010305_V01.IMG  JIR_IMG_RDR_2023250T010305_V01.LBL  JIR_IMG_RDR_2023250T010305_V01.xml  JIR_IMG_RDR_2023250T010335_V01.IMG  JIR_IMG_RDR_2023250T010335_V01.LBL  JIR_IMG_RDR_2023250T010335_V01.xml  JIR_IMG_RDR_2023250T010406_V01.IMG  JIR_IMG_RDR_2023250T010406_V01.LBL  JIR_IMG_RDR_2023250T010406_V01.xml  JIR_IMG_RDR_2023250T010437_V01.IMG  JIR_IMG_RDR_2023250T010437_V01.LBL  JIR_IMG_RDR_2023250T010437_V01.xml  JIR_IMG_RDR_2023250T010507_V01.IMG  (+74 more)
docs/: physics_pdes_patch04.md
patch04_backup_20260626_153234/src/: main.cpp
patch04_backup_20260626_153234/src/common/: Constants.hpp
patch04_backup_20260626_153234/src/config/: SimConfig.cpp  SimConfig.hpp
patch04_backup_20260626_153234/src/core/: Grid.cpp
patch04_backup_20260626_153234/src/cuda/: CudaRadiativeTransfer.cu
patch04_backup_20260626_153234/src/io/: Diagnostics.cpp  RuntimeTable.hpp  Visualizer.cpp  Visualizer.hpp
patch04_backup_20260626_153234/src/physics/: EOS.cpp  EOS.hpp  RadiativeTransfer.hpp  TimeStep.cpp
scripts/: visualize_shell.py
scripts/geometry/: spice_predict_satellite.py
scripts/pipeline/: build_all_assets.py
scripts/precompute/: export_runtime_assets.py  inspect_h5.py  precompute_cia_hitran.py  precompute_common.py  precompute_h3plus_approx.py  precompute_opacity.py  run_precompute_all.py  validate.py
scripts/readers/: spe_rdr_preview.py
scripts/remote/: remote_build_cuda.sh  sync_to_remote_example.sh
scripts/render/: make_movie.sh
src/: .gitignore  IMG_reader_1.py  distributions.h  main.cpp  regimes.h  temp_runner.py  temp_runner2.py
src/common/: Vec3.hpp
src/config/: SimConfig.cpp  SimConfig.h  SimConfig.hpp
src/core/: Cell.hpp  CellGeometry.hpp  CellIndex.hpp  Grid.cpp  Grid.h  Grid.hpp
src/cuda/: CudaHooks.cpp  CudaHooks.hpp
src/io/: Diagnostics.cpp  Diagnostics.h  RuntimeTable.cpp  Visualizer.cpp  Visualizer.h  Visualizer.hpp
src/physics/: Dynamics.cpp  Dynamics.h  Dynamics.hpp  EOS.cpp  EOS.h  Layer.hpp  RadiativeTransfer.cpp  RadiativeTransfer.h  TimeStep.cpp  TimeStep.h
src/pipeline/: InitialConditions.cpp
src/state/: ConservedState.hpp  PrimitiveState.hpp  Species.hpp
(+15 files in other folders)
